# faststream-sqlbroker

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  404.html  README.development.md  README.md  docker-compose.yaml  index.html  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: docs.yaml  pr_lint_and_test.yaml  release_pypi.yaml  test.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/sqla/: design.md  index.md  tutorial.md
docs/docs/sqlbroker/: design.md  index.md  tutorial.md
docs/docs/stylesheets/: extra.css
docs/docs_src/sqla/: publish.py  retry.py  subscribe.py  tables.py  transactional_outbox.py
docs/docs_src/sqlbroker/: acknowledgements.py  broker.py  publish.py  retry.py  subscribe.py  tables.py  transactional_outbox.py
docs/hooks/: faststream_links.py
faststream_sqlbroker/: __init__.py
faststream_sqlbroker/sqla/: __init__.py  annotations.py  client.py  exceptions.py  message.py  parser.py  response.py  retry.py
faststream_sqlbroker/sqla/broker/: __init__.py  broker.py  logging.py  registrator.py  router.py
faststream_sqlbroker/sqla/configs/: __init__.py  broker.py  subscriber.py
faststream_sqlbroker/sqla/publisher/: config.py  factory.py  producer.py  specification.py  usecase.py
faststream_sqlbroker/sqla/subscriber/: factory.py  specification.py  usecase.py
faststream_sqlbroker/sqlbroker/: __init__.py  annotations.py  client.py  exceptions.py  message.py  parser.py  response.py  schema.py  schema_validator.py
faststream_sqlbroker/sqlbroker/broker/: __init__.py  broker.py  logging.py  registrator.py  router.py
faststream_sqlbroker/sqlbroker/configs/: __init__.py  broker.py  subscriber.py
faststream_sqlbroker/sqlbroker/publisher/: __init__.py  config.py  factory.py  producer.py  specification.py  usecase.py
faststream_sqlbroker/sqlbroker/subscriber/: factory.py  specification.py  usecase.py
search/: search_index.json
sqla/design/: index.html
sqlbroker/design/: index.html
sqlbroker/tutorial/: index.html
stylesheets/: extra.d9dd83.min.css
tests/: __init__.py  basic.py  conftest.py  helpers.py  test_ack_policy.py  test_archive.py  test_connect.py  test_consume.py  test_misconfigure.py  test_outbox.py  test_parser.py  test_public_api.py  test_publish.py  test_retry_strategy.py  test_router.py  test_schema_validation.py
tests/docs/sqlbroker/: test_acknowledgements.py  test_broker.py  test_publish.py  test_retry.py  test_subscribe.py  test_tables.py  test_transactional_outbox.py
tests/infra/: init_mysql.sql
