[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "faststream-sqlbroker"
description = "FastStream SQL broker"
readme = "README.md"
authors = [
    { name = "Arseniy Popov", email = "arseniypopov@gmail.com" },
]
requires-python = ">=3.10"
version = "0.1.0a4"

dependencies = [
    "faststream>=0.7.0rc1",
    "sqlalchemy>=2.0.44",
]

[tool.uv.build-backend]
module-root = "."
module-name = "faststream_sqlbroker"

[dependency-groups]
lint = [
    "ruff==0.14.14",
    "mypy==1.19.1",
]

test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "dirty-equals==0.11",
    "asyncpg>=0.31.0",
    "asyncmy>=0.2.10",
    "aiosqlite>=0.22.1",
    "cryptography>=43.0.0",
]

docs = [
    "mkdocs-material>=9.5.0",
    "mdx-include>=1.4.2",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.0",
]

dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    "pre-commit==4.5.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
timeout = 30
addopts = "--strict-markers --strict-config -q --ignore=tests/faststream"
testpaths = ["tests"]
norecursedirs = ["tests/faststream"]
markers = [
    "slow",
    "connected",
    "all",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["faststream_sqlbroker", "docs/docs_src"]

[tool.coverage.report]
fail_under = 90
